[gd_scene load_steps=4 format=3 uid="uid://ibw58h7hq5vq"]

[ext_resource type="Script" path="res://Luta.gd" id="1_c3j2y"]
[ext_resource type="PackedScene" uid="uid://dlftagrqi65gd" path="res://hero.tscn" id="2_7exsv"]
[ext_resource type="PackedScene" uid="uid://do8chwfgic5y2" path="res://villain.tscn" id="3_0n41o"]

[node name="Luta" type="Node2D"]
process_mode = 1
script = ExtResource("1_c3j2y")

[node name="Hero" parent="." instance=ExtResource("2_7exsv")]
position = Vector2(384, 448)
scale = Vector2(2, 2)

[node name="Villain" parent="." instance=ExtResource("3_0n41o")]
position = Vector2(768, 448)
scale = Vector2(2, 2)

[node name="hero_move_1" type="Button" parent="."]
offset_left = 56.0
offset_top = 320.0
offset_right = 256.0
offset_bottom = 382.0
text = "Swift Thrust"

[node name="hero_move_2" type="Button" parent="."]
offset_left = 56.0
offset_top = 416.0
offset_right = 256.0
offset_bottom = 478.0
text = "Holy Slash"

[node name="hero_move_3" type="Button" parent="."]
offset_left = 56.0
offset_top = 512.0
offset_right = 256.0
offset_bottom = 574.0
text = "Healing Light"

[node name="villain_move_1" type="Button" parent="."]
offset_left = 896.0
offset_top = 320.0
offset_right = 1096.0
offset_bottom = 382.0
text = "Dark Breath"

[node name="villain_move_2" type="Button" parent="."]
offset_left = 896.0
offset_top = 416.0
offset_right = 1096.0
offset_bottom = 478.0
text = "Deadly Blast"

[node name="villain_move_3" type="Button" parent="."]
offset_left = 896.0
offset_top = 512.0
offset_right = 1096.0
offset_bottom = 574.0
text = "Absorb Darkness"

[node name="Turns" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 468.0
offset_top = 184.0
offset_right = 675.0
offset_bottom = 275.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "23 / 25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeroHealth" type="Label" parent="."]
offset_left = 256.0
offset_top = 272.0
offset_right = 384.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 32
text = "health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeroStamina" type="Label" parent="."]
offset_left = 385.0
offset_top = 272.0
offset_right = 512.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 32
text = "stamina"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VillainHealth" type="Label" parent="."]
offset_left = 640.0
offset_top = 272.0
offset_right = 768.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 32
text = "health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VillainStamina" type="Label" parent="."]
offset_left = 769.0
offset_top = 272.0
offset_right = 896.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 32
text = "stamina"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 24.0
offset_right = 1128.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Message"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="SubMessage" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 64.0
offset_top = 96.0
offset_right = 1088.0
offset_bottom = 144.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Sub message"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="EpicnessTag" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 63.0
offset_top = 256.0
offset_right = 1087.0
offset_bottom = 285.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Epicness
ðŸ‘‘"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="DebugInfo" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 576.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Reload" type="Button" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 80.0
offset_bottom = 47.0
text = "Reload"

[node name="Quit" type="Button" parent="."]
offset_left = 16.0
offset_top = 56.0
offset_right = 80.0
offset_bottom = 87.0
text = "Quit"

[node name="TransitionMessage" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 63.0
offset_top = 344.0
offset_right = 1103.0
offset_bottom = 600.0
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="TransitionMessage"]
layout_mode = 0
offset_left = -10.0
offset_top = -344.0
offset_right = 1049.0
offset_bottom = 320.0
color = Color(0.298039, 0.298039, 0.298039, 1)

[node name="Line1" type="Label" parent="TransitionMessage"]
layout_mode = 0
offset_left = 72.0
offset_top = -216.0
offset_right = 968.0
offset_bottom = -125.0
theme_override_font_sizes/font_size = 64
text = "Win"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Line2" type="Label" parent="TransitionMessage"]
layout_mode = 0
offset_left = 72.0
offset_top = -56.0
offset_right = 968.0
offset_bottom = -1.0
theme_override_font_sizes/font_size = 40
text = "Something happened"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Line3" type="Label" parent="TransitionMessage"]
layout_mode = 0
offset_left = 9.0
offset_top = 72.0
offset_right = 1024.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 32
text = "What happened"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Line4" type="Label" parent="TransitionMessage"]
layout_mode = 0
offset_left = 400.0
offset_top = 168.0
offset_right = 647.0
offset_bottom = 216.0
text = "Next Stage will begin in seconds"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="hero_move_1" to="." method="_on_hero_move_1"]
[connection signal="button_down" from="hero_move_2" to="." method="_on_hero_move_2"]
[connection signal="button_down" from="hero_move_3" to="." method="_on_hero_move_3"]
[connection signal="button_down" from="villain_move_1" to="." method="_on_villain_move_1"]
[connection signal="button_down" from="villain_move_2" to="." method="_on_villain_move_2"]
[connection signal="button_down" from="villain_move_3" to="." method="_on_villain_move_3"]
[connection signal="button_down" from="Reload" to="." method="_on_reload_button_down"]
[connection signal="button_down" from="Quit" to="." method="_on_quit_button_down"]
